src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__aa.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 17,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 17,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 17,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 8,
            "name": "sg"
          },
          "init": {
            "type": "UnaryExpression",
            "start": 11,
            "end": 17,
            "operator": "-",
            "argument": {
              "type": "Identifier",
              "start": 12,
              "end": 17,
              "name": "scale"
            }
          }
        }
      ],
      "kind": "const"
    }
  ]
}
