src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__ad.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 80,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 5,
      "end": 57,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 8,
          "end": 57,
          "id": {
            "type": "Identifier",
            "start": 8,
            "end": 24,
            "name": "firstPrimeNumber",
            "digest": null
          },
          "init": {
            "type": "FunctionExpression",
            "type": "FunctionExpression",
            "start": 27,
            "end": 57,
            "params": [],
            "body": {
              "start": 33,
              "end": 57,
              "body": [
                {
                  "type": "ReturnStatement",
                  "type": "ReturnStatement",
                  "start": 43,
                  "end": 51,
                  "argument": {
                    "type": "Literal",
                    "type": "Literal",
                    "start": 50,
                    "end": 51,
                    "value": 2,
                    "raw": "2",
                    "digest": null
                  },
                  "digest": null
                }
              ],
              "nonCodeMeta": {
                "nonCodeNodes": {},
                "start": [],
                "digest": null
              },
              "digest": null
            },
            "digest": null
          },
          "digest": null
        }
      ],
      "visibility": "default",
      "kind": "fn",
      "digest": null
    },
    {
      "type": "ExpressionStatement",
      "type": "ExpressionStatement",
      "start": 62,
      "end": 80,
      "expression": {
        "type": "CallExpression",
        "type": "CallExpression",
        "start": 62,
        "end": 80,
        "callee": {
          "type": "Identifier",
          "start": 62,
          "end": 78,
          "name": "firstPrimeNumber",
          "digest": null
        },
        "arguments": [],
        "optional": false,
        "digest": null
      },
      "digest": null
    }
  ],
  "nonCodeMeta": {
    "nonCodeNodes": {},
    "start": [],
    "digest": null
  },
  "digest": null
}
