src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__af.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 165,
  "body": [
    {
      "type": "VariableDeclaration",
      "start": 0,
      "end": 165,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 165,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 14,
            "name": "mySketch"
          },
          "init": {
            "type": "PipeExpression",
            "type": "PipeExpression",
            "start": 17,
            "end": 165,
            "body": [
              {
                "type": "CallExpression",
                "type": "CallExpression",
                "start": 17,
                "end": 37,
                "callee": {
                  "type": "Identifier",
                  "start": 17,
                  "end": 30,
                  "name": "startSketchAt"
                },
                "arguments": [
                  {
                    "type": "ArrayExpression",
                    "type": "ArrayExpression",
                    "start": 31,
                    "end": 36,
                    "elements": [
                      {
                        "type": "Literal",
                        "type": "Literal",
                        "start": 32,
                        "end": 33,
                        "value": 0,
                        "raw": "0"
                      },
                      {
                        "type": "Literal",
                        "type": "Literal",
                        "start": 34,
                        "end": 35,
                        "value": 0,
                        "raw": "0"
                      }
                    ]
                  }
                ],
                "optional": false
              },
              {
                "type": "CallExpression",
                "type": "CallExpression",
                "start": 49,
                "end": 75,
                "callee": {
                  "type": "Identifier",
                  "start": 49,
                  "end": 55,
                  "name": "lineTo"
                },
                "arguments": [
                  {
                    "type": "ArrayExpression",
                    "type": "ArrayExpression",
                    "start": 56,
                    "end": 62,
                    "elements": [
                      {
                        "type": "Literal",
                        "type": "Literal",
                        "start": 57,
                        "end": 58,
                        "value": 0,
                        "raw": "0"
                      },
                      {
                        "type": "Literal",
                        "type": "Literal",
                        "start": 60,
                        "end": 61,
                        "value": 1,
                        "raw": "1"
                      }
                    ]
                  },
                  {
                    "type": "PipeSubstitution",
                    "type": "PipeSubstitution",
                    "start": 64,
                    "end": 65
                  },
                  {
                    "type": "TagDeclarator",
                    "type": "TagDeclarator",
                    "start": 67,
                    "end": 74,
                    "value": "myPath"
                  }
                ],
                "optional": false
              },
              {
                "type": "CallExpression",
                "type": "CallExpression",
                "start": 87,
                "end": 104,
                "callee": {
                  "type": "Identifier",
                  "start": 87,
                  "end": 93,
                  "name": "lineTo"
                },
                "arguments": [
                  {
                    "type": "ArrayExpression",
                    "type": "ArrayExpression",
                    "start": 94,
                    "end": 100,
                    "elements": [
                      {
                        "type": "Literal",
                        "type": "Literal",
                        "start": 95,
                        "end": 96,
                        "value": 1,
                        "raw": "1"
                      },
                      {
                        "type": "Literal",
                        "type": "Literal",
                        "start": 98,
                        "end": 99,
                        "value": 1,
                        "raw": "1"
                      }
                    ]
                  },
                  {
                    "type": "PipeSubstitution",
                    "type": "PipeSubstitution",
                    "start": 102,
                    "end": 103
                  }
                ],
                "optional": false
              },
              {
                "type": "CallExpression",
                "type": "CallExpression",
                "start": 116,
                "end": 145,
                "callee": {
                  "type": "Identifier",
                  "start": 116,
                  "end": 122,
                  "name": "lineTo"
                },
                "arguments": [
                  {
                    "type": "ArrayExpression",
                    "type": "ArrayExpression",
                    "start": 123,
                    "end": 129,
                    "elements": [
                      {
                        "type": "Literal",
                        "type": "Literal",
                        "start": 124,
                        "end": 125,
                        "value": 1,
                        "raw": "1"
                      },
                      {
                        "type": "Literal",
                        "type": "Literal",
                        "start": 127,
                        "end": 128,
                        "value": 0,
                        "raw": "0"
                      }
                    ]
                  },
                  {
                    "type": "PipeSubstitution",
                    "type": "PipeSubstitution",
                    "start": 131,
                    "end": 132
                  },
                  {
                    "type": "TagDeclarator",
                    "type": "TagDeclarator",
                    "start": 134,
                    "end": 144,
                    "value": "rightPath"
                  }
                ],
                "optional": false
              },
              {
                "type": "CallExpression",
                "type": "CallExpression",
                "start": 157,
                "end": 165,
                "callee": {
                  "type": "Identifier",
                  "start": 157,
                  "end": 162,
                  "name": "close"
                },
                "arguments": [
                  {
                    "type": "PipeSubstitution",
                    "type": "PipeSubstitution",
                    "start": 163,
                    "end": 164
                  }
                ],
                "optional": false
              }
            ]
          }
        }
      ],
      "kind": "const"
    }
  ]
}
