src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__aj.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 49,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 49,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 49,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 11,
            "name": "myBox",
            "digest": null
          },
          "init": {
            "type": "PipeExpression",
            "type": "PipeExpression",
            "start": 14,
            "end": 49,
            "body": [
              {
                "type": "CallExpression",
                "type": "CallExpression",
                "start": 14,
                "end": 30,
                "callee": {
                  "type": "Identifier",
                  "start": 14,
                  "end": 27,
                  "name": "startSketchAt",
                  "digest": null
                },
                "arguments": [
                  {
                    "type": "Identifier",
                    "type": "Identifier",
                    "start": 28,
                    "end": 29,
                    "name": "p",
                    "digest": null
                  }
                ],
                "optional": false,
                "digest": null
              },
              {
                "type": "CallExpression",
                "type": "CallExpression",
                "start": 34,
                "end": 49,
                "callee": {
                  "type": "Identifier",
                  "start": 34,
                  "end": 38,
                  "name": "line",
                  "digest": null
                },
                "arguments": [
                  {
                    "type": "ArrayExpression",
                    "type": "ArrayExpression",
                    "start": 39,
                    "end": 45,
                    "elements": [
                      {
                        "type": "Literal",
                        "type": "Literal",
                        "start": 40,
                        "end": 41,
                        "value": 0,
                        "raw": "0",
                        "digest": null
                      },
                      {
                        "type": "Identifier",
                        "type": "Identifier",
                        "start": 43,
                        "end": 44,
                        "name": "l",
                        "digest": null
                      }
                    ],
                    "digest": null
                  },
                  {
                    "type": "PipeSubstitution",
                    "type": "PipeSubstitution",
                    "start": 47,
                    "end": 48,
                    "digest": null
                  }
                ],
                "optional": false,
                "digest": null
              }
            ],
            "nonCodeMeta": {
              "nonCodeNodes": {},
              "start": [],
              "digest": null
            },
            "digest": null
          },
          "digest": null
        }
      ],
      "visibility": "default",
      "kind": "const",
      "digest": null
    }
  ],
  "nonCodeMeta": {
    "nonCodeNodes": {},
    "start": [],
    "digest": null
  },
  "digest": null
}
