src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__ak.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 22,
  "body": [
    {
      "type": "ExpressionStatement",
      "type": "ExpressionStatement",
      "start": 0,
      "end": 22,
      "expression": {
        "type": "CallExpression",
        "start": 0,
        "end": 22,
        "callee": {
          "type": "Identifier",
          "start": 0,
          "end": 6,
          "name": "lineTo"
        },
        "arguments": [
          {
            "type": "ObjectExpression",
            "start": 7,
            "end": 21,
            "properties": [
              {
                "type": "ObjectProperty",
                "start": 9,
                "end": 19,
                "key": {
                  "type": "Identifier",
                  "start": 9,
                  "end": 11,
                  "name": "to"
                },
                "value": {
                  "type": "ArrayExpression",
                  "start": 13,
                  "end": 19,
                  "elements": [
                    {
                      "type": "Literal",
                      "start": 14,
                      "end": 15,
                      "value": 0,
                      "raw": "0"
                    },
                    {
                      "type": "Literal",
                      "start": 17,
                      "end": 18,
                      "value": 1,
                      "raw": "1"
                    }
                  ]
                }
              }
            ]
          }
        ],
        "optional": false
      }
    }
  ]
}
