src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__al.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 36,
  "body": [
    {
      "type": "ExpressionStatement",
      "start": 0,
      "end": 36,
      "expression": {
        "type": "CallExpression",
        "type": "CallExpression",
        "start": 0,
        "end": 36,
        "callee": {
          "type": "Identifier",
          "start": 0,
          "end": 6,
          "name": "lineTo"
        },
        "arguments": [
          {
            "type": "ObjectExpression",
            "type": "ObjectExpression",
            "start": 7,
            "end": 35,
            "properties": [
              {
                "type": "ObjectProperty",
                "start": 9,
                "end": 19,
                "key": {
                  "type": "Identifier",
                  "start": 9,
                  "end": 11,
                  "name": "to"
                },
                "value": {
                  "type": "ArrayExpression",
                  "type": "ArrayExpression",
                  "start": 13,
                  "end": 19,
                  "elements": [
                    {
                      "type": "Literal",
                      "type": "Literal",
                      "start": 14,
                      "end": 15,
                      "value": 0,
                      "raw": "0"
                    },
                    {
                      "type": "Literal",
                      "type": "Literal",
                      "start": 17,
                      "end": 18,
                      "value": 1,
                      "raw": "1"
                    }
                  ]
                }
              },
              {
                "type": "ObjectProperty",
                "start": 21,
                "end": 33,
                "key": {
                  "type": "Identifier",
                  "start": 21,
                  "end": 25,
                  "name": "from"
                },
                "value": {
                  "type": "ArrayExpression",
                  "type": "ArrayExpression",
                  "start": 27,
                  "end": 33,
                  "elements": [
                    {
                      "type": "Literal",
                      "type": "Literal",
                      "start": 28,
                      "end": 29,
                      "value": 3,
                      "raw": "3"
                    },
                    {
                      "type": "Literal",
                      "type": "Literal",
                      "start": 31,
                      "end": 32,
                      "value": 3,
                      "raw": "3"
                    }
                  ]
                }
              }
            ]
          }
        ],
        "optional": false
      }
    }
  ]
}
